Eliminados unos bugs molestos en la carga de comics nuevos y en la inmtro del programa